@@ -13,6 +13,7 @@
 * Elavon: Multi-currency support [jknipp] #3210
 * Adyen: Support preAuths and Synchronous Adjusts [curiousepic] #3212
 * WorldPay: Support Unknown Card Type [tanyajajodia] #3213
+* Mundipagg: Make gateway_affiliation_id an option [curiousepic] #3219
 
 == Version 1.93.0 (April 18, 2019)
 * Stripe: Do not consider a refund unsuccessful if only refunding the fee failed [jasonwebster] #3188
